--- a/top/index.html
+++ b/top/index.html
@@ -49,11 +49,13 @@
     .schedule-label {
       font-weight: bold;
       margin-bottom: 3px;
+      white-space: pre-wrap;
     }
 
     .schedule-text {
       font-size: 14px;
       color: #555;
+      white-space: pre-wrap;
     }
 
     .buttons {
@@ -62,6 +64,11 @@
 
     .buttons button {
       margin-right: 5px;
+      background-color: #fffacd;
+      border: 1px solid #ccc;
+      padding: 4px 8px;
+      cursor: pointer;
+      border-radius: 4px;
     }
 
     form {
@@ -71,18 +78,25 @@
       border-radius: 10px;
     }
 
-    form input, form textarea {
+    form input[type="text"],
+    form input[type="date"],
+    form textarea {
       width: 100%;
       margin-bottom: 10px;
-      padding: 8px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
       box-sizing: border-box;
+      font-size: 14px;
     }
 
     form button {
-      padding: 8px 16px;
-      background-color: white;
-      border: 1px solid #ccc;
+      padding: 10px 20px;
+      background-color: #f7e98b;
+      border: 1px solid #999;
+      border-radius: 6px;
       cursor: pointer;
+      font-weight: bold;
     }
 
     h2 {
@@ -100,9 +114,9 @@
     <form id="scheduleForm">
       <h2>今日の予定リスト送信</h2>
       <input type="date" id="dateInput" required />
-      <input type="text" id="labelInput" placeholder="例：ひな祭り" required />
-      <textarea id="contentInput" placeholder="予定の内容" required></textarea>
-      <button type="submit">送信</button>
+      <input type="text" id="labelInput" placeholder="例：通常活動日" required />
+      <textarea id="contentInput" placeholder="予定の内容（改行OK）" rows="4" required></textarea>
+      <button type="submit">送信する</button>
     </form>
   </div>
 
@@ -167,15 +181,16 @@
         const editBtn = document.createElement("button");
         editBtn.textContent = "編集";
         editBtn.onclick = async () => {
-          const newLabel = prompt("ラベルを変更:", data.label);
-          const newContent = prompt("内容を変更:", data.content);
-          if (newLabel && newContent) {
-            await updateDoc(doc(db, "schedules", docSnap.id), {
-              label: newLabel,
-              content: newContent
-            });
-            loadSchedules();
-          }
+          const newLabel = prompt("ラベルを編集:", data.label);
+          if (newLabel === null) return;
+          const newContent = prompt("内容を編集:", data.content);
+          if (newContent === null) return;
+
+          await updateDoc(doc(db, "schedules", docSnap.id), {
+            label: newLabel,
+            content: newContent
+          });
+          loadSchedules();
         };
 
         const deleteBtn = document.createElement("button");
@@ -211,7 +226,7 @@
       loadSchedules();
     });
 
-    // 今日以外のデータは削除（オプション）
+    // 自動削除（前日以前）
     async function deleteOldSchedules() {
       const q = query(collection(db, "schedules"));
       const snapshot = await getDocs(q);
