--- a/top/index.html
+++ b/top/index.html
@@ -13,7 +13,7 @@
     }
 
     .container {
-      max-width: 800px; /* ← ここ広げた！ */
+      max-width: 800px;
       margin: 20px auto;
       padding: 0 20px;
     }
@@ -233,8 +233,11 @@
         const deleteBtn = document.createElement("button");
         deleteBtn.textContent = "削除";
         deleteBtn.onclick = async () => {
-          await deleteDoc(doc(db, "schedules", docSnap.id));
-          loadSchedules();
+          const confirmDelete = confirm("本当にこの予定を削除しますか？");
+          if (confirmDelete) {
+            await deleteDoc(doc(db, "schedules", docSnap.id));
+            loadSchedules();
+          }
         };
 
         buttons.appendChild(editBtn);
