--- a/top/index.html
+++ b/top/index.html
@@ -1,4 +1,3 @@
-<!-- （前のコードをまるごとこのコードに置き換えてOK） -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -81,8 +80,7 @@
 
     form input[type="text"],
     form input[type="date"],
-    form textarea,
-    form select {
+    form textarea {
       width: 100%;
       margin-bottom: 10px;
       padding: 10px;
@@ -101,6 +99,10 @@
       font-weight: bold;
     }
 
+    h2 {
+      margin-bottom: 10px;
+    }
+
     #editModal {
       display: none;
       position: fixed;
@@ -117,7 +119,7 @@
       max-width: 400px;
     }
 
-    #editModal input, #editModal textarea, #editSender {
+    #editModal input, #editModal textarea {
       width: 100%;
       margin-bottom: 10px;
       padding: 8px;
@@ -144,25 +146,6 @@
     <form id="scheduleForm">
       <h2>今日の予定リスト送信</h2>
       <input type="date" id="dateInput" required />
-      <select id="senderInput" required>
-        <option disabled selected>▶︎送信者を選択</option>
-        <option disabled>ーー顧問の先生ーーーー</option>
-        <option>顧問 赤井峰子</option>
-        <option>顧問 大坪志那都</option>
-        <option>顧問 高橋利光</option>
-        <option>顧問 高橋佳子</option>
-        <option>顧問 武内悠祐</option>
-        <option>顧問 橋本温子</option>
-        <option>顧問 山岸周平</option>
-        <option>顧問 山本剛史</option>
-        <option>事務 吉田千佳</option>
-        <option disabled>ーー正副部長ーーーー</option>
-        <option>2101 赤池はるひ</option>
-        <option disabled>ーー部員ーーーー</option>
-        <option>2201 本谷元</option>
-        <option>2202 森悠成</option>
-        <option>2203 小泉耕平</option>
-      </select>
       <input type="text" id="labelInput" placeholder="例：通常活動日" required />
       <textarea id="contentInput" placeholder="予定の内容（改行OK）" rows="4" required></textarea>
       <button type="submit">送信する</button>
@@ -171,25 +154,6 @@
 
   <div id="editModal">
     <h3>予定を編集</h3>
-    <select id="editSender">
-      <option disabled>▶︎送信者を選択</option>
-      <option disabled>ーー顧問の先生ーーーー</option>
-      <option>顧問 赤井峰子</option>
-      <option>顧問 大坪志那都</option>
-      <option>顧問 高橋利光</option>
-      <option>顧問 高橋佳子</option>
-      <option>顧問 武内悠祐</option>
-      <option>顧問 橋本温子</option>
-      <option>顧問 山岸周平</option>
-      <option>顧問 山本剛史</option>
-      <option>事務 吉田千佳</option>
-      <option disabled>ーー正副部長ーーーー</option>
-      <option>2101 赤池はるひ</option>
-      <option disabled>ーー部員ーーーー</option>
-      <option>2201 本谷元</option>
-      <option>2202 森悠成</option>
-      <option>2203 小泉耕平</option>
-    </select>
     <input type="text" id="editLabel" placeholder="ラベル" />
     <textarea id="editContent" rows="4" placeholder="内容（改行OK）"></textarea>
     <div style="text-align: right;">
@@ -248,7 +212,7 @@
 
         const label = document.createElement("div");
         label.className = "schedule-label";
-        label.textContent = `[${data.label}] ${data.sender}`;
+        label.textContent = `[${data.label}]`;
 
         const content = document.createElement("div");
         content.className = "schedule-text";
@@ -263,7 +227,6 @@
           currentEditId = docSnap.id;
           document.getElementById("editLabel").value = data.label;
           document.getElementById("editContent").value = data.content;
-          document.getElementById("editSender").value = data.sender;
           document.getElementById("editModal").style.display = "block";
         };
 
@@ -292,13 +255,11 @@
       const date = document.getElementById("dateInput").value;
       const label = document.getElementById("labelInput").value;
       const content = document.getElementById("contentInput").value;
-      const sender = document.getElementById("senderInput").value;
 
       await addDoc(collection(db, "schedules"), {
         date,
         label,
-        content,
-        sender
+        content
       });
 
       e.target.reset();
@@ -308,13 +269,11 @@
     document.getElementById("saveEdit").addEventListener("click", async () => {
       const newLabel = document.getElementById("editLabel").value;
       const newContent = document.getElementById("editContent").value;
-      const newSender = document.getElementById("editSender").value;
       if (!currentEditId) return;
 
       await updateDoc(doc(db, "schedules", currentEditId), {
         label: newLabel,
-        content: newContent,
-        sender: newSender
+        content: newContent
       });
 
       currentEditId = null;
