--- a/grades/index.html
+++ b/grades/index.html
@@ -2,10 +2,102 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>トップページ</title>
+  <title>学習記録</title>
+  <style>
+    body { background: white; font-family: sans-serif; padding: 20px; background-color: #fffacd; }
+    select, input, button { display: block; margin: 10px 0; padding: 8px; width: 100%; max-width: 400px; }
+    .record { background: #fff; margin: 10px 0; padding: 10px; border-radius: 8px; }
+  </style>
 </head>
 <body>
-  <h1>ト</h1>
+  <h1>学習記録アプリ</h1>
+  <select id="subject">
+    <option value="">教科を選ぶ</option>
+    <option>国語</option><option>数学</option><option>理科</option><option>社会</option>
+    <option>英語</option><option>音楽</option><option>情報</option><option>保健</option>
+    <option>宗教</option><option>算盤</option><option>ピアノ</option>
+    <option>演劇部</option><option>美術部</option><option>図書委員会</option>
+  </select>
+  <input type="text" id="detail" placeholder="何をしたか">
+  <input type="time" id="from">
+  <input type="time" id="to">
+  <button onclick="saveRecord()">記録する</button>
+
+  <h2>記録一覧</h2>
+  <div id="records"></div>
+
+  <h2>期間指定して集計</h2>
+  <input type="date" id="startDate">
+  <input type="date" id="endDate">
+  <button onclick="calcTotal()">合計を表示</button>
+  <div id="totalTime"></div>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getFirestore, collection, addDoc, getDocs, Timestamp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    async function saveRecord() {
+      const subject = document.getElementById('subject').value;
+      const detail = document.getElementById('detail').value;
+      const from = document.getElementById('from').value;
+      const to = document.getElementById('to').value;
+      const now = new Date();
+
+      await addDoc(collection(db, "records"), {
+        subject, detail, from, to, date: now.toISOString().slice(0,10),
+        timestamp: Timestamp.now()
+      });
+
+      alert("記録しました！");
+      showRecords();
+    }
+
+    async function showRecords() {
+      const querySnapshot = await getDocs(collection(db, "records"));
+      const recordsDiv = document.getElementById('records');
+      recordsDiv.innerHTML = "";
+      querySnapshot.forEach(doc => {
+        const r = doc.data();
+        const div = document.createElement("div");
+        div.className = "record";
+        div.innerText = `${r.date} ${r.subject} ${r.from}〜${r.to}：${r.detail}`;
+        recordsDiv.appendChild(div);
+      });
+    }
+
+    async function calcTotal() {
+      const start = document.getElementById("startDate").value;
+      const end = document.getElementById("endDate").value;
+      const querySnapshot = await getDocs(collection(db, "records"));
+      let totalMinutes = 0;
+
+      querySnapshot.forEach(doc => {
+        const r = doc.data();
+        if (r.date >= start && r.date <= end) {
+          const t1 = new Date("1970-01-01T" + r.from + ":00");
+          const t2 = new Date("1970-01-01T" + r.to + ":00");
+          const mins = (t2 - t1) / (1000 * 60);
+          totalMinutes += mins;
+        }
+      });
+
+      const hours = (totalMinutes / 60).toFixed(2);
+      document.getElementById("totalTime").innerText = `合計学習時間：${hours} 時間`;
+    }
+
+    showRecords();
+  </script>
 </body>
 </html>
-
